tests/cases/scc/error/0001-sanity.c.res
./tests/cases/scc/error/0001-sanity.c:4:9:	error:   undefined identifier ‘FOO’.
exit code 1
